product_docs/docs/warehousepg/7.6/best_practices/resgroups.mdx
---
# Imported from the WHPG docs repo (https://github.com/warehouse-pg/whpg-docs)
# Changes made here may be overwritten. Prefer making changes in the source repo instead.
# See the originalFilePath value below for a link to the source of this file in the WHPG docs repo.
#
# To make changes that apply _only_ to EDB's documentation, try to cleanly separate those changes in the content
# (e.g. separate lines or ideally paragraphs or even sections, with clear indications that the content is EDB-specific) and 
# reach out to the docs team to discuss.

title: Memory and Resource Management with Resource Groups
originalFilePath: >-
  https://github.com/warehouse-pg/whpg-docs/blob/main/docs/whpg/7x/best_practices/resgroups.md
editTarget: originalFilePath

---

Managing WarehousePG resources with resource groups.

Memory, CPU, and concurrent transaction management have a significant impact on performance in a WarehousePG cluster. Resource groups are a newer resource management scheme that enforce memory, CPU, and concurrent transaction limits in WarehousePG.

For conceptual information about configuring and using resource groups, see [Using Resource Groups](../admin_guide/performance/wlmgmt/workload_mgmt_resgroups.mdx).

-   [Configuring Memory for WarehousePG](#section_r52_rbl_zt)
-   [Memory Considerations when using Resource Groups](#toolowmem)
-   [Configuring Resource Groups](#configuring_rg)
-   [Low Memory Queries](#section113x)
-   [Administrative Utilities and admin_group Concurrency](#section177x)

<a id="section_r52_rbl_zt"></a>

## Configuring Memory for WarehousePG

While it is not always possible to increase system memory, you can avoid many out-of-memory conditions by configuring resource groups to manage expected workloads.

The following operating system and WarehousePG memory settings are significant when you manage WarehousePG resources with resource groups:

-   **vm.overcommit_memory**

    This Linux kernel parameter, set in [`/etc/sysctl.conf`](../install_guide/config_os.mdx#topic3), identifies the method that the operating system uses to determine how much memory can be allocated to processes. `vm.overcommit_memory` must always be set to 2 for WarehousePG clusters.

-   **vm.overcommit_ratio**

    This Linux kernel parameter, set in [`/etc/sysctl.conf`](../install_guide/config_os.mdx#topic3), identifies the percentage of RAM that is used for application processes; the remainder is reserved for the operating system. Tune the setting as necessary. If your memory utilization is too low, increase the value; if your memory or swap usage is too high, decrease the setting.

-   **gp_workfile_limit_files_per_query**

    Set `gp_workfile_limit_files_per_query` to limit the maximum number of temporary spill files (workfiles) allowed per query. Spill files are created when a query requires more memory than it is allocated. When the limit is exceeded the query is terminated. The default is zero, which allows an unlimited number of spill files and may fill up the file system.

-   **gp_workfile_compression**

    If there are numerous spill files then set `gp_workfile_compression` to compress the spill files. Compressing spill files may help to avoid overloading the disk subsystem with IO operations.

-   **statement_mem**

    WarehousePG uses the `statement_mem` setting to determine the amount of memory to allocate to a query.

Other considerations:

-   Do not configure the operating system to use huge pages. See the [Recommended OS Parameters Settings](../install_guide/config_os.mdx#topic3) in the *WarehousePG Installation Guide*.
-   When you configure resource group memory, consider memory requirements for mirror segments that become primary segments during a failure to ensure that database operations can continue when primary segments or segment hosts fail.

<a id="toolowmem"></a>

## Memory Considerations when using Resource Groups

Available memory for resource groups may be limited on systems that use low or no swap space, and that use the default `vm.overcommit_ratio`. To ensure that WarehousePG has a reasonable per-segment-host memory limit, you may be required to increase one or more of the following configuration settings:

1.  The swap size on the system.
2.  The system's `vm.overcommit_ratio` setting.

<a id="configuring_rg"></a>

## Configuring Resource Groups

WarehousePG resource groups provide a powerful mechanism for managing the workload of the cluster. Consider these general guidelines when you configure resource groups for your system:

-   A transaction submitted by any WarehousePG role with `SUPERUSER` privileges runs under the default resource group named `admin_group`. Keep this in mind when scheduling and running WarehousePG administration utilities.
-   Ensure that you assign each non-admin role a resource group. If you do not assign a resource group to a role, queries submitted by the role are handled by the default resource group named `default_group`.
-   Use the `CONCURRENCY` resource group parameter to limit the number of active queries that members of a particular resource group can run concurrently.
-   Use the `MEMORY_QUOTA` parameter, together with `CONCURRENCY`, to size a query's planned memory allocation during query planning. `MEMORY_QUOTA` doesn't cap the memory that a resource group's queries can consume on a segment.
-   All queries on a segment, regardless of resource group, draw memory from a single shared per-segment memory pool. The [gp_vmem_protect_limit](../ref_guide/config_params/guc-list.mdx#gp_vmem_protect_limit) parameter controls the size of this pool, and the Runaway Detector cancels queries when segment memory usage exceeds `gp_vmem_protect_limit` \* `runaway_detector_activation_percent`.
-   Alter resource groups dynamically to match the real requirements of the group for the workload and the time of day.
-   Use the `gp_toolkit` views to examine resource group resource usage and to monitor how the groups are working.

<a id="section113x"></a>

## Low Memory Queries

A low `statement_mem` setting (for example, in the 10MB range) has been shown to increase the performance of queries with low memory requirements. Use the `statement_mem` server configuration parameter to override the setting on a per-query basis. For example:

```
SET statement_mem='10 MB';
```

<a id="section177x"></a>

## Administrative Utilities and admin_group Concurrency

The default resource group for database transactions initiated by WarehousePG `SUPERUSER`s is the group named `admin_group`. The default `CONCURRENCY` value for the `admin_group` resource group is 10.

Certain WarehousePG administrative utilities may use more than one `CONCURRENCY` slot at runtime, such as `gpbackup` that you invoke with the `--jobs` option. If the utility(s) you run require more concurrent transactions than that configured for `admin_group`, consider temporarily increasing the group's `MEMORY_QUOTA` and `CONCURRENCY` values to meet the utility's requirement, making sure to return these parameters back to their original settings when the utility completes.

!!!info Note

Memory allocation changes that you initiate with `ALTER RESOURCE GROUP` may not take affect immediately due to resource consumption by currently running queries. Be sure to alter resource group parameters in advance of your maintenance window.
!!!

**Parent topic:** [WarehousePG Best Practices](./)
